--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,8 @@
           <h3>Chat app</h3><br />
           <h3>Online</h3>
           <div id="users"></div>
-          <h3>Rooms</h3>
+          <h3>Groups</h3>
+          <button id="createGroupId">Create Group</button>
           <div id="rooms"></div>
       </div>
 
