--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
         <input type="text" name="name" autofocus/>
       </div>
       <div class="form-field">
-        <label>Room name</label>
-        <input type="text" name="room"/>
+        <!-- <label>Room name</label>
+        <input type="text" name="room"/> -->
       </div>
         <div class="form-field">
         <button>Join</button>
