socket io complete

--- a/public/chat.html
+++ b/public/chat.html
@@ -18,7 +18,7 @@
 
       <div class="chat__main">
             <section class="chat__nav"> 
-                    <div id="all" class="chat__nav-tab"><span class="chat__nav-name" onClick="selectTab('all')">*all</span></div>
+                    <div id="all" class="chat__nav-tab"><span class="chat__nav-name" onClick="selectTab('all')">EveryBody</span></div>
                     <div id="potato" class="chat__nav-tab active"><span class="chat__nav-name" onClick="selectTab('potato')">potato</span> <b class="chat__nav-close" onClick="closeTab('potato')">x</b></div>
                 </section>
             <ol id="messages" class="chat__messages"> </ol>
